cabal-version: 2.2
build-type:    Simple

name:          gossip
version:       0.1.0.0
synopsis:      Gossip Protocols
homepage:      https://github.com/oscoin/gossip
bug-reports:   https://github.com/oscoin/gossip/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Kim Altintop <kim@monadic.xyz>
maintainer:    Kim Altintop <kim@monadic.xyz>, Monadic Team <team@monadic.xyz>
copyright:     2018 Monadic GmbH

category:      Network

extra-source-files:
      CHANGELOG.md
    , README.md

source-repository head
    type: git
    location: https://github.com/oscoin/gossip

common common
    default-language: Haskell2010

    build-depends:
        async
      , base
      , bytestring
      , containers
      , safe-exceptions
      , splitmix
      , stm
      , transformers
      , unordered-containers

    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        RecordWildCards
        StrictData
        TupleSections
        TypeApplications
        ViewPatterns

    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -fprint-expanded-synonyms
        -funbox-small-strict-fields

library
    import: common
    hs-source-dirs: src

    exposed-modules:
        Network.Gossip.HyParView
        Network.Gossip.HyParView.Periodic
        Network.Gossip.IO.Peer
        Network.Gossip.IO.Protocol
        Network.Gossip.IO.Run
        Network.Gossip.IO.Socket
        Network.Gossip.IO.Trace
        Network.Gossip.IO.Wire
        Network.Gossip.Plumtree
        Network.Gossip.Plumtree.Scheduler

    other-modules:
        Network.Gossip.HyParView.Internal
        Network.Socket.Serialise
        Paths_gossip

    build-depends:
        conduit > 1.3
      , focus
      , hashable
      , list-t
      , microlens
      , mtl
      , network
      , random
      , serialise
      , stm-containers >= 1 && < 1.2
      , text
      , time


test-suite tests
    import: common

    main-is: Main.hs
    hs-source-dirs: test
    type: exitcode-stdio-1.0

    build-depends:
        algebraic-graphs == 0.2.*
      , gossip
      , hashable
      , hedgehog >= 0.6
      , hedgehog-quickcheck >= 0.1.1
      , microlens
      , QuickCheck
      , random

    other-modules:
        Test.Network.Gossip.Assert
        Test.Network.Gossip.Broadcast
        Test.Network.Gossip.Gen
        Test.Network.Gossip.Helpers
        Test.Network.Gossip.Membership

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
